2004-04-14  Bradley Bell  <btb@icculus.org>

	* arch/sdl/rbaudio.c: fix redbook tracking problems (fixes #1028)

2004-04-14  Sean Taylor <sscthunderbird@yahoo.com>

	* main/songs.c: uncomment calls to RBAStop (fixes #473)

2004-01-08  Martin Schaffner <maschaffner@gmx.ch>

        * configure.ac, arch/linux/ipx_udp.c, maths/fixc.c:
	get rid of warnings (now compiles with -Werror on SunOS)

	* main/piggy.c: fix (really) wierd SunOS bug

	* 2d/bitmap.c, 2d/rle.c, include/gr.h: fix MEM_OVERWRITE
	caused by not allocating enough mem for rle bitmaps

2004-01-06  Martin Schaffner <maschaffner@gmx.ch>

        * include/pstypes.h: sun OS typedef fixes

2003-12-28  Martin Schaffner <maschaffner@gmx.ch>

	* main/piggy.c: fix bug 1067

	* main/piggy.c: fix bugfix for 1067

	* main/piggy.c: fix 2nd part of bug 1067 (make d2x compatible
	with descent.pig of mac registered)

2003-12-18  Bradley Bell  <btb@icculus.org>

	* main/kconfig.c: fixes for linux-native joystick

	* main/kconfig.c: bunch of fixes (esp. for non linux-native
	joystick)

	* arch/include/joy.h: comments/formatting

2003-12-10  Alexander Y. Yeikovich <demon@mci.net.ua>

	* compilerdefs.txt: added FreeBSD defs

2003-12-08  Bradley Bell <btb@icculus.org>

	* include/dtypes.h, include/dtypes.inc: remove unused, redundant
	files

2003-12-08  Alexander Y. Yeikovich <demon@mci.net.ua>

	* arch/linux/ipx_kali.c, arch/linux/ipx_mcast4.c,
	arch/linux/ipx_udp.c: fix FreeBSD compile errors

2003-12-08  Alexander Y. Yeikovich <demon@mci.net.ua> and Bradley Bell <btb@icculus.org>

	* 2d/ibitblt.c, include/maths.h, include/ogl_init.h,
	include/pstypes.h, main/game.c, main/game.h, unused/bios/ipx.c:
	get rid of silly ulongs

	* configure.ac, 2d/bitblt.c, 2d/linear.asm, maths/fix.asm,
	maths/vecmata.asm, texmap/tmap_inc.asm, texmap/tmap_per.asm,
	texmap/tmappent.S, texmap/tmapppro.S: enable nasm on FreeBSD,
	change relevant __linux__ macros to __ELF__

2003-11-27  Bradley Bell  <btb@icculus.org>
