@@ -2,6 +2,10 @@
 
 	* arch/sdl/rbaudio.c: fix redbook tracking problems (fixes #1028)
 
+2004-04-14  Terran Melconian <terran@consistent.org>
+
+	* main/gameseg.c: use portable rand function (fixes #1118)
+
 2004-04-14  Sean Taylor <sscthunderbird@yahoo.com>
 
 	* main/songs.c: uncomment calls to RBAStop (fixes #473)
